--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Js Demo</title>
 </head>
-<script src="jsPage.js"></script>
+<!-- <script src="jsPage.js"></script> -->
+<script src="ifelse.js"></script>
 <body>
     Hello js 
     
