--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Js Demo</title>
 </head>
 <!-- <script src="jsPage.js"></script> -->
-<script src="loops.js"></script>
+<script src="Manipulating.js"></script>
 <body>
     Hello js 
     
