--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Js Demo</title>
 </head>
 <!-- <script src="jsPage.js"></script> -->
-<script src="Manipulating.js"></script>
+<!-- <script src="Manipulating.js"></script> -->
 <body>
-    Hello js 
     
+    
+    <script src="Manipulating.js"></script>
+
 </body>
 
-</html> 
+</html>    
