--- a/Website1.html
+++ b/Website1.html
@@ -26,7 +26,7 @@
             <a href="https://www.google.com/">Go to Code </a>
             <br>
             <br>    
-            Search this website: <input type="text" name="Hello" id="">
+            Search this website: <input type="text" name="Hello" id="val">
             <input type="button" value="submit" id="btn">
         </form>
     </div>
@@ -38,5 +38,5 @@
 </body>
 <!-- <script src="js/tut12.js"></scrip> -->
 <!-- <script src="js/tut14.js"></script> -->
-<script src="MoreEvents.js"></script>
+<script src="localst.js"></script>
 </html>
