--- a/projectjs/index.html
+++ b/projectjs/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link id="favicon" rel="icon"
+          href="notepad.png"
+          type="image/png" 
+          sizes="16x16">
     <title>Notes App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
 </head>
 
 <body>
@@ -38,7 +43,7 @@
         <h1>Welcome To Magic Notes</h1>
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Add a note</h5>
+                <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
                     <textarea class="form-control" id="addTxt" rows="3"  onkeyup="EnableDisable(this)"></textarea>
                 </div>
