--- a/projectjs/index.html
+++ b/projectjs/index.html
@@ -45,7 +45,7 @@
             <div class="card-body">
                 <h5 class="card-title">Add a Note</h5>
                 <div class="form-group">
-                    <textarea class="my-3 form-control" id="note" rows="1"  onkeyup="EnableDisable(this)"></textarea>
+                    <textarea class="my-3 form-control" id="addtitle" rows="1"  onkeyup="EnableDisable(this)"></textarea>
                     <textarea class="form-control" id="addTxt" rows="3"  onkeyup="EnableDisable(this)"></textarea>
                 </div>
                 <button class="btn btn-primary" id="addBtn" disabled="disabled">Add Note</button>
