--- a/projectjs/projectjs2/projectajax/proajax.html
+++ b/projectjs/projectjs2/projectajax/proajax.html
@@ -27,7 +27,7 @@
     <table class="table">
         <thead>
           <tr>
-            <th scope="col">#id</th>
+            <th scope="col">id</th>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
             <th scope="col">Website</th>
