--- a/projectjs/projectjs2/projectajax/proajax.html
+++ b/projectjs/projectjs2/projectajax/proajax.html
@@ -15,8 +15,9 @@
 
 <body>
     <h1>Ajax </h1>
-    <button type="button" id="fetchBtn" class="btn btn-primary">Fetch Data</button>
-    <button type="button" id="popBtn" class="btn btn-secondary">Populate</button>
+
+    <button type="button" id="fetchBtn" class="btn btn-primary mt-2 mr-2">Fetch Data</button>
+    <button type="button" id="popBtn" class="btn btn-secondary mt-2 mr-2">Populate</button>
 
     <!-- <div class="container">
         <h1>Employee list</h1>
