Api Get/Post Call

--- a/projectjs/projectjs2/projectajax/proajax.html
+++ b/projectjs/projectjs2/projectajax/proajax.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1>Ajax </h1>
+    <h1>Api Get/Post Call </h1>
 
     <button type="button" id="fetchBtn" class="btn btn-primary mt-2 mr-2">Fetch Data</button>
     <button type="button" id="popBtn" class="btn btn-secondary mt-2 mr-2">Populate</button>
