--- a/projectjs/projectjs2/fetchapi/async/wait/Regular Expressions/shorthand_char/project5/index.html
+++ b/projectjs/projectjs2/fetchapi/async/wait/Regular Expressions/shorthand_char/project5/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title> Welcome to  travels</title>
+    <title> Welcome to travels</title>
 </head>
 
 <body>
@@ -21,11 +21,11 @@
         </button>
     </div>
     <div id="failure" class="alert alert-danger alert-dismissible fade" role="alert">
-            <strong>Error!</strong> Your travel request has not been sent due to errors
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">×</span>
-            </button>
-        </div>
+        <strong>Error!</strong> Your travel request has not been sent due to errors
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">×</span>
+        </button>
+    </div>
     <div class="container">
         <h1>Travel desk</h1>
         <form>
@@ -33,16 +33,16 @@
                 <label for="name">Username</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter your username">
                 <small id="namevalid" class="form-text text-muted invalid-feedback">
-                        Your username must be 2-10 characters long and should not start with a number
-                      </small>
+                    Your username must be 2-10 characters long and should not start with a number
+                </small>
             </div>
 
             <div class="form-group">
                 <label for="email">Email address</label>
                 <input type="text" class="form-control" id="email" placeholder="Enter your email">
                 <small id="emailvalid" class="form-text text-muted invalid-feedback">
-                        Your email must be a valid email
-                      </small>
+                    Your email must be a valid email
+                </small>
             </div>
             <div class="form-group">
                 <label for="car">Select your car</label>
@@ -61,14 +61,23 @@
                 <label for="address">Enter your phone number</label>
                 <input class="form-control" name="phone" id="phone" rows="3">
                 <small id="emailvalid" class="form-text text-muted invalid-feedback">
-                        Your phone number must be 10 digit long
-                      </small>
+                    Your phone number must be 10 digit long
+                </small>
             </div>
+
             <div class="form-group">
                 <label for="exampleFormControlTextarea1">Any other message...</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <button id="submit" class="btn btn-primary">Submit</button>
+
+
+            <div class="form-group">
+
+                <input id="file" type="file" multiple  class="form-control"  name="file"/>
+            </div>
+
+
+            <button id="submit" class="btn btn-primary  ">Submit</button>
         </form>
 
     </div>
@@ -84,7 +93,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
